--- a/pages/Tutorials/Basics/ROOT.mdx
+++ b/pages/Tutorials/Basics/ROOT.mdx
@@ -33,6 +33,7 @@ There are many other great resources for learning ROOT. We recommend the followi
 - [ROOT Primer](https://root.cern/primer/)
 - [ROOT Manual](https://root.cern/manual/)
 - [ROOT Tutorials](https://root.cern/doc/master/group__Tutorials.html)
+- [ROOT Reference Guide](https://root.cern/doc/master/index.html)
 - [ROOT Forum](https://root-forum.cern.ch/)
 
 These will also be discused more at the end of this tutorial.
@@ -738,8 +739,10 @@ If you want to save the plot with a different extension you can change the exten
     ```
 </Callout>
 
-## Conclusion
+## Wrap Up
 
 In this tutorial, you learned how to use ROOT to plot and analyze data from a ROOT file that was used in an actual experiment. We covered basic plotting techniques, such as making and filling histograms making changes to the histogram values and fitting data. We also learned how to use macros to automate our analysis and make our work more reproducible. Finally, we added some presentation settings to our plot, such as changing the title, axis labels, and line color.
 
 With these skills, you can now apply ROOT to your own research projects and experiments. Remember to always document your code and analysis steps, and to use macros to make your work more efficient and reproducible. Happy ROOTing!
+
+The best place to move on from here is to go through the root [primer](https://root.cern.ch/primer/). This goes over more of the basics of root. After that reading through the [manual](https://root.cern/manual/) as needed is a good idea. As well as looking up questions to problems in the [root forum](https://root-forum.cern.ch/) and checking out examples in the [tutorials](https://root.cern/doc/master/group__Tutorials.html). And of course chatGPT is always a good place to ask questions and develop code much more quickly than you can on your own.
