--- a/pages/MOLLER/Labsandequip.mdx
+++ b/pages/MOLLER/Labsandequip.mdx
@@ -1,5 +1,5 @@
 # ISU Laboratory Spaces and Equipment
-In this section, we will introduce you to the laboratory spaces and equipment used by Dr. MCNulty's group at Idaho State University (ISU). Each lab space contains specific equipment and tools that the group uses to conduct experiments, analyze data, and develop new technologies.
+In this section, we will introduce you to the laboratory spaces and equipment used by Dr. McNulty's group at Idaho State University (ISU). Each lab space contains specific equipment and tools that the group uses to conduct experiments, analyze data, and develop new technologies.
 
 ## Main Lab Space
 The main lab space is where the majority of the group's experimental work takes place. Some of the key equipment found in this space includes:
