--- a/pages/Tutorials/CAD/Basics.mdx
+++ b/pages/Tutorials/CAD/Basics.mdx
@@ -1,15 +1,33 @@
 # CAD Software: Inventor, Solidworks, and Fusion 360
+
+
+## Overview
 In this tutorial, we will introduce you to CAD (Computer-Aided Design) software, specifically Inventor, Solidworks, and Fusion 360. 
 These programs are used to create 3D models of parts and assemblies for various applications, including designing experimental setups and custom components. 
 No prior experience with CAD software is assumed, and this tutorial is designed to be accessible for new incoming students.
 
 The group has previously used Solidworks to design parts for Showermax and various other components. There was a change made by the MOLLER
-colaboration to use Autodesk Inventor instead of Solidworks. This tutorial will provide instructions on how to download and install Inventor, Solidworks, and Fusion 360 (for Mac users). 
+colaboration to use Autodesk Inventor instead of Solidworks. Fusion 360 is a good alternative for mac users. This tutorial will provide instructions on how to download and install Inventor, Solidworks, and Fusion 360.
 
-## What is CAD Software?
-CAD stands for Computer-Aided Design.
-It is used to create precise 3D models of objects and assemblies.
-Commonly used in engineering, product design, and research projects.
+## Tutorial Objectives
+This Tutorial is meant to get the ball rolling for those who are new to the group. Its main goal is to get the software installed and running on your computer or to at least get you using the software on campus.
+
+## Limitations
+This tutorial is not meant to give you guidence on how to use the software. There is a more indepth tutorial on making something with fusion 360 [here](/Tutorials/CAD/3Dprinting).
+
+## Other Resources
+
+### Autodesk Inventor
+
+[Autodesk Inventor Tutorials](https://help.autodesk.com/view/INVNTOR/2021/ENU/?guid=GUID-25E3BABE-0FF4-4542-854E-AD2F59E4BB4A)
+
+### Solidworks
+
+[Solidworks Tutorials](https://www.solidworks.com/support/home)
+
+### Fusion 360
+
+[Fusion 360 Tutorials](https://help.autodesk.com/view/fusion360/ENU/courses/)
 
 
 ## Downloading and Installing Inventor, Solidworks, and Fusion 360
@@ -31,7 +49,7 @@ Solidworks charges for a student account, however free accounts are offered thro
 3. Follow the on-screen instructions to download and install the software.
 
 Or 
-1. Use available computers on camopus with Solidworks installed.
+1. Use available computers on campus with Solidworks installed.
 
 Or 
 
@@ -53,7 +71,7 @@ Now that you have installed the CAD software, it's time to start exploring its f
 
 In this section we will provide step-by-step instructions for creating simple models in Inventor, Solidworks, and Fusion 360.
 
-### Tutorial: Inventor
+### Inventor
 1. Open Autodesk Inventor.
 2. Click on "New" and select "Standard.ipt" to start a new part.
 3. Use the tools in the "Sketch" tab to create a simple shape (e.g., a rectangle).
@@ -62,7 +80,7 @@ In this section we will provide step-by-step instructions for creating simple mo
 6. Click "OK" when done.
 7. Use the "File" tab and select "Save As" to save your model.
 
-### Tutorial: Solidworks
+### Solidworks
 1. Open Solidworks.
 2. Click on "New" and select "Part" to start a new part.
 3. Use the tools in the "Sketch" tab to create a simple shape (e.g., a rectangle).
@@ -71,7 +89,7 @@ In this section we will provide step-by-step instructions for creating simple mo
 6. Click "OK" when done.
 7. Use the "File" tab and select "Save As" to save your model.
 
-### Tutorial: Fusion 360
+### Fusion 360
 1. Open Fusion 360.
 2. Click on "New" and select "Blank Design" to start a new part.
 3. Use the tools in the "Sketch" tab to create a simple shape (e.g., a rectangle).
